admin page bugfix on tablets

--- a/frontend/src/app/admin/admin.css
+++ b/frontend/src/app/admin/admin.css
@@ -113,8 +113,8 @@
     gap: 1rem;
   }
 
-  .users-table tbody tr {
-    background-color: white;
+  .questions-table thead {
+    display: none;
   }
 
   .questions-table th:nth-child(4),
@@ -127,11 +127,10 @@
     grid-template-columns: auto 1fr auto;
     grid-template-rows: auto auto;
     padding: 1rem;
-    padding-bottom: 1.5rem;
     background: #f8f9fa;
     border: 1px solid #dee2e6;
     border-radius: 4px;
-    margin-bottom: 0;
+    margin: 0 0 0.5rem 0;
   }
 
   .questions-table td:nth-child(1) {
@@ -469,6 +468,7 @@
     align-items: center;
     gap: 1rem;
     padding: 0.5rem;
+    margin: 0 0 0.5rem 0;
   }
 
   .questions-table td {
